Corrected text alignment in responsive design (homework_6)

--- a/docs/homework_6.css
+++ b/docs/homework_6.css
@@ -410,7 +410,9 @@ footer {
     text-align: center;
     font-size: 12px;
     display: flex;
-    align-items: center; } }
+    align-items: center; }
+  .section-description > p {
+    text-align: justify; } }
 
 @media (max-width: 576px) {
   .section-content__models {
@@ -422,7 +424,8 @@ footer {
     font-size: 2.5rem; }
   .section-description > p {
     font-size: 13px;
-    padding: 0; }
+    padding: 0;
+    text-align: justify; }
   .compare_img {
     width: 100%;
     padding: 10px; }
@@ -450,7 +453,9 @@ footer {
     margin-right: 0;
     padding-right: 0;
     margin-bottom: 5px;
-    padding-bottom: 2px; } }
+    padding-bottom: 2px; }
+  .page-nav__link2 {
+    padding: 0; } }
 
 @media (max-width: 425px) {
   .page-sub-nav {
